[Acceptor_Conntor] Reorganize directory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(${CMAKE_SOURCE_DIR})
 set (framework_v_1_0 
      framework/v_1_0/EventHandler.cpp 
      framework/v_1_0/Reactor.cpp )
-
+     
 set (framework_v_1_1_lib
      framework/v_1_1/Acceptor.cpp 
      framework/v_1_1/EventHandler.cpp 
@@ -20,6 +20,18 @@ set (framework_v_1_1_lib
      framework/v_1_1/SockAcceptor.cpp 
      framework/v_1_1/SockConnector.cpp 
      framework/v_1_1/SockStream.cpp )
+     
+set (lib_framework_reactor_1_0
+     framework/reactor/1_0/EventHandler.cpp 
+     framework/reactor/1_0/Reactor.cpp )
+     
+set (lib_framework_acceptor_connector_1_0
+     framework/acceptor_connector/1_0/Acceptor.cpp 
+     framework/acceptor_connector/1_0/Connector.cpp
+     framework/acceptor_connector/1_0/ServiceHandler.cpp 
+     framework/acceptor_connector/1_0/SockAcceptor.cpp 
+     framework/acceptor_connector/1_0/SockConnector.cpp 
+     framework/acceptor_connector/1_0/SockStream.cpp )
 
 
 set (example_1_client_source 
@@ -32,12 +44,12 @@ set (example_1_server_source
      
 set (ex_acc_con_server_lib
      applications/example_acceptor_connector/MainServer.cpp
-     applications/example_acceptor_connector/ExAcceptor.cpp
+     applications/example_acceptor_connector/AcceptorImpl.cpp
      applications/example_acceptor_connector/InputHandler.cpp)
 
 set (ex_acc_con_client_lib
      applications/example_acceptor_connector/MainClient.cpp
-     applications/example_acceptor_connector/ExConnector.cpp
+     applications/example_acceptor_connector/ConnectorImpl.cpp
      applications/example_acceptor_connector/OutputHandler.cpp 
      applications/example_acceptor_connector/Client.cpp)
          
@@ -47,16 +59,20 @@ add_executable(example_reactor_client
 
 add_executable(example_reactor_server
   ${example_1_server_source}
-  ${framework_v_1_0}
+  ${lib_framework_reactor_1_0}
 )
  
 add_executable(ex_acc_con_client_1
   ${ex_acc_con_client_lib}
-  ${framework_v_1_1_lib}
+  ${lib_framework_acceptor_connector_1_0}
+  ${lib_framework_reactor_1_0}
 )
 
 add_executable(ex_acc_con_server_1
   ${ex_acc_con_server_lib}
-  ${framework_v_1_1_lib}
+  ${lib_framework_acceptor_connector_1_0}
+  ${lib_framework_reactor_1_0}
 )
+
+
  
